--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     </head>
     <body>
     <div>
-        <h2>Aplicación ToDo Albert, Alfredo, Jose</h2>
+        <h2 class="header">Aplicación ToDo Albert, Alfredo, Jose</h2>
     </div>
     <form method="post" action="index.php">
-        <input type="text" name="task">
-        <button type="submit" name="submit">Añadir tarea</button>
+        <input class="input_anadir" type="text" name="task">
+        <button class="button_anadir" type="submit" name="submit">Añadir tarea</button>
     </form>
     </body>
 </html>
