--- a/html/index.html
+++ b/html/index.html
@@ -23,11 +23,11 @@
     </head>
     <body>
     <div>
-        <h2>Aplicación ToDo Albert, Alfredo, Jose</h2>
+        <h2 class="header">Aplicación ToDo Albert, Alfredo, Jose</h2>
     </div>
     <form action="../php/ToDoFunctions" method="post" name="ToDoForm" id="ToDoForm">
-        <input type="text" name="task">
-        <button type="submit" id="submit" name="submit">Añadir tarea</button>
+        <input class="input_anadir" type="text" name="task">
+        <button class="button_anadir" type="submit" name="submit">Añadir tarea</button>
     </form>
     <div id="items"></div>
     </body>
