--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
                 $(document).on("click", "#submit", function() {
                     var dataString = $('#ToDoForm').serialize();
                     $.ajax({
-                        url: "../php/ToDoFunctions",
+                        url: "../php/ToDoCreateTask",
                         type:"post",
                         data:dataString,
                         success: function(result) {
@@ -25,7 +25,7 @@
     <div>
         <h2 class="header">Aplicación ToDo Albert, Alfredo, Jose</h2>
     </div>
-    <form action="../php/ToDoFunctions" method="post" name="ToDoForm" id="ToDoForm">
+    <form action="../php/ToDoCreateTask" method="post" name="ToDoForm" id="ToDoForm">
         <input class="input_anadir" type="text" name="task">
         <button class="button_anadir" type="submit" name="submit">Añadir tarea</button>
     </form>
