--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
         <title>Aplicación ToDo</title>
-        <link rel="stylesheet" type="text/css" href="../style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script>
             $(document).ready(function() {
                 $.ajax({
-                    url: "../php/ToDoListTasks.php",
+                    url: "php/ToDoListTasks.php",
                     type:"post",
                     success: function(returned) {
                         $("#items").html(returned);
@@ -18,22 +18,22 @@
                 $("#submit").on("click", function() {
                     var dataString = $('#ToDoForm').serialize();
                     $.ajax({
-                        url: "../php/ToDoCreateTask.php",
+                        url: "php/ToDoCreateTask.php",
                         type:"post",
                         data:dataString,
                         success: function(returned) {
-                            if(returned!=="OK"){
-                                $("#error").html(returned);
-                            }else{
+                            if(returned=="OK"){
                                 location.reload();
+                            }else{
+                                $("#error").html(returned);
                             }
                         }
                     })
                 });
-                $(document).on("click", "button", function() {
+                $(document).on("click", ".button_eliminar", function() {
                     var id = $(this).attr('id');
                     $.ajax({
-                        url: "../php/ToDoDeleteTask.php",
+                        url: "php/ToDoDeleteTask.php",
                         type:"post",
                         data:{'id':id},
                         success: function(returned) {
@@ -48,11 +48,13 @@
     <div>
         <h2 class="header">Aplicación ToDo Albert, Alfredo, Jose</h2>
     </div>
-    <form action="../php/ToDoCreateTask.php" method="post" name="ToDoForm" id="ToDoForm">
+    <form action="php/ToDoCreateTask.php" method="post" name="ToDoForm" id="ToDoForm">
         <input class="input_anadir" type="text" name="task">
         <button class="button_anadir" id="submit" type="button" name="submit">Añadir tarea</button>
     </form>
-    <div id="error"></div>
-    <div id="items"></div>
+    <div id="box">
+        <div id="error"></div>
+        <div id="items"></div>
+    </div>
     </body>
 </html>
